# toy-lang

./: .gitignore  .rustfmt.toml  Cargo.toml  LICENSE-MIT.txt  README.md  specs.toml
.cargo/: config.toml
.github/workflows/: ci.yml
codegen/: Cargo.toml
codegen/src/: main.rs  specs.rs
codegen/src/collections/: impls.rs  mod.rs
codegen/src/specs/: mod.rs  tokens.rs
codegen/src/specs/ast/: lex.rs  mod.rs  parse.rs  print.rs  raw.rs
codegen/src/specs/ast/collapsed/: mod.rs  transform.rs
codegen/src/specs/ast/parsed/: mod.rs  transform.rs
compiler/: .gitignore
compiler/syntax/: Cargo.toml
compiler/syntax/tests/: syntax.rs  tokens.rs
compiler/syntax/tests/snapshots/: syntax__main@simple.toy.snap  tokens__main@returns.toy.snap  tokens__main@simple.toy.snap
compiler/toyc/: Cargo.toml
compiler/toyc-arena/: Cargo.toml
compiler/toyc-arena/src/: dropless.rs  lib.rs  typed.rs
compiler/toyc-arena/src/typed/: iter.rs  mod.rs
compiler/toyc-ast/: Cargo.toml
compiler/toyc-ast-lowering/: Cargo.toml
compiler/toyc-ast-lowering/src/: context.rs  lib.rs
compiler/toyc-ast-lowering/tests/: ast-lowering.rs
compiler/toyc-ast-lowering/tests/snapshots/: ast_lowering__main@empty.toy.snap  ast_lowering__main@extern.toy.snap  ast_lowering__main@returns.toy.snap  ast_lowering__main@simple.toy.snap
compiler/toyc-ast-passes/: Cargo.toml
compiler/toyc-ast-passes/src/: lib.rs
compiler/toyc-ast/src/: error.rs  lib.rs  visitor.rs
compiler/toyc-ast/src/ast/: mod.rs
compiler/toyc-ast/src/tokens/: mod.rs
compiler/toyc-ast/tests/: syntax.rs  tokens.rs
compiler/toyc-ast/tests/snapshots/: syntax__main@empty.toy.snap  syntax__main@extern.toy.snap  syntax__main@returns.toy.snap  syntax__main@simple.toy.snap  tokens__main@empty.toy.snap
compiler/toyc-data-structures/: Cargo.toml
compiler/toyc-data-structures/src/: fingerprint.rs  lib.rs
compiler/toyc-data-structures/src/fingerprint/: fingerprinted.rs  mod.rs
compiler/toyc-errors/: Cargo.toml
compiler/toyc-errors/src/: diagnostic.rs  diagnostic_builder.rs  emitter.rs  handler.rs  lib.rs
compiler/toyc-hir/: Cargo.toml
compiler/toyc-hir-passes/: Cargo.toml
compiler/toyc-hir-passes/src/: definitions.rs  lib.rs  undefined.rs
compiler/toyc-hir-pretty/: Cargo.toml
compiler/toyc-hir-pretty/src/: lib.rs
compiler/toyc-hir/src/: context.rs  hir.rs  hir_id.rs  lib.rs
compiler/toyc-macros/: Cargo.toml
compiler/toyc-macros/src/: fingerprint.rs  lib.rs
compiler/toyc-main/: Cargo.toml
compiler/toyc-main/src/: lib.rs
compiler/toyc-session/: Cargo.toml
compiler/toyc-session/src/: lib.rs
compiler/toyc-span/: Cargo.toml
compiler/toyc-span/src/: lib.rs  source.rs  span.rs  symbol.rs
compiler/toyc-syntax/: .gitignore  Cargo.toml
compiler/toyc-syntax/src/tokens/: fmt.rs  mod.rs
compiler/toyc-syntax/tests/: syntax.rs  tokens.rs
compiler/toyc-syntax/tests/snapshots/: syntax__main@extern.toy.snap  syntax__main@returns.toy.snap  syntax__main@simple.toy.snap
compiler/toyc-util/: Cargo.toml
compiler/toyc-util/src/: freezable.rs  lib.rs
compiler/toyc/src/: main.rs
crates/compiler/: Cargo.toml
crates/compiler/src/: main.rs
crates/compiler/src/ast/: mod.rs
crates/compiler/src/tokens/: fmt.rs  mod.rs  tests.rs  toys
crates/compiler/src/tokens/snapshots/: toy_lang_compiler__tokens__tests__snapshot@empty.toy.snap  toy_lang_compiler__tokens__tests__snapshot@extern.toy.snap  toy_lang_compiler__tokens__tests__snapshot@returns.toy.snap  toy_lang_compiler__tokens__tests__snapshot@simple.toy.snap
crates/syntax/: Cargo.toml
crates/syntax/src/: error.rs
crates/syntax/src/tokens/: fmt.rs  mod.rs  tests.rs
crates/syntax/src/tokens/snapshots/: toy_lang_syntax__tokens__tests__snapshot@extern.toy.snap  toy_lang_syntax__tokens__tests__snapshot@returns.toy.snap  toy_lang_syntax__tokens__tests__snapshot@simple.toy.snap
crates/syntax/tests/: snapshot.rs
crates/syntax/tests/snapshots/: snapshot__main@empty.toy.snap  snapshot__main@extern.toy.snap  snapshot__main@returns.toy.snap  snapshot__main@simple.toy.snap  syntax__main@empty.toy.snap  syntax__main@extern.toy.snap  syntax__main@returns.toy.snap  tokens__main@extern.toy.snap
crates/test-util/: Cargo.toml
specs/: ast.bnf  specs.toml  toy.ast
src/ci/: Cargo.toml
src/codegen/: Cargo.toml
src/codegen/src/: main.rs
src/test-util/: Cargo.toml
src/test-util/src/: lib.rs
src/test-util/src/toys/: returns.toy  simple.toy
tools/: Cargo.toml
tools/codegen/: Cargo.toml
tools/codegen/src/: main.rs  specs.rs
tools/test-util/src/: lib.rs
toys/: extern.toy  returns.toy
