[package]
name = "toy-lang-codegen"
authors = ["person93 <person93.person93@gmail.com>"]
version = "0.0.0"
edition = "2021"
description = "Internal crate used for codegen"
license = "MIT OR APACHE"
publish = false

[dependencies]
ast-description-lang = "0.1.0"
anyhow = "1.0.53"
indexmap = { version = "1.8.0", features = ["serde"] }
proc-macro2 = "1.0.36"
quote = "1.0.15"
serde = { version = "1.0.134", features = ["derive"] }
toml = "0.5.8"
