[package]
name = "toyc-ast-lowering"
authors = ["person93 <person93.person93@gmail.com>"]
version = "0.0.0"
edition = "2021"
description = "A toy programming language to play around with"
license = "MIT OR APACHE"
publish = false

[dependencies]
toyc-arena = { path = "../toyc-arena" }
toyc-ast = { path = "../toyc-ast" }
toyc-hir = { path = "../toyc-hir" }
toyc-session = { path = "../toyc-session" }
toyc-span = { path = "../toyc-span" }

[dev-dependencies]
test-util = { path = "../../src/test-util" }
toyc-hir-pretty = { path = "../toyc-hir-pretty" }

[[test]]
name = "ast-lowering"
path = "tests/ast-lowering.rs"
harness = false
