[package]
name = "toyc-ast"
authors = ["person93 <person93.person93@gmail.com>"]
version = "0.0.0"
edition = "2021"
description = "A toy programming language to play around with"
license = "MIT OR APACHE"
publish = false

[dependencies]
chumsky = "0.8.0"
internment = "0.6.0"
logos = "0.12.0"
toyc-errors = { path = "../toyc-errors" }
toyc-span = { path = "../toyc-span" }

[dev-dependencies]
anyhow = "1.0.55"
test-util = { path = "../../tools/test-util" }

[[test]]
name = "tokens"
path = "tests/tokens.rs"
harness = false

[[test]]
name = "syntax"
path = "tests/syntax.rs"
harness = false
