[package]
name = "toyc-hir-passes"
authors = ["person93 <person93.person93@gmail.com>"]
version = "0.0.0"
edition = "2021"
description = "A toy programming language to play around with"
license = "MIT OR APACHE"
publish = false

[dependencies]
hashbrown = "0.12.0"
toyc-hir = { path = "../toyc-hir" }
toyc-session = { path = "../toyc-session" }
toyc-span = { path = "../toyc-span" }
