[package]
name = "toyc-span"
authors = ["person93 <person93.person93@gmail.com>"]
version = "0.0.0"
edition = "2021"
description = "A toy programming language to play around with"
license = "MIT OR APACHE"
publish = false

[dependencies]
chumsky = { version = "0.8.0", default-features = false }
hashbrown = "0.12.0"
internment = "0.6.0"
serde = { version = "1.0.136", default-features = false, features = ["derive"] }
toyc-data-structures = { path = "../toyc-data-structures" }
unicode-xid = "0.2.2"
