[package]
name = "toyc-syntax"
authors = ["person93 <person93.person93@gmail.com>"]
version = "0.1.0-dev"
edition = "2021"
description = "A toy programming language to play around with"
license = "MIT OR APACHE"
publish = false

[dependencies]
chumsky = "0.8.0"
logos = "0.12.0"

[dev-dependencies]
anyhow = "1.0.55"
test-util = { path = "../../tools/test-util" }

[[test]]
name = "tokens"
path = "tests/tokens.rs"
harness = false

[[test]]
name = "syntax"
path = "tests/syntax.rs"
harness = false
