[package]
name = "toyc"
authors = ["person93 <person93.person93@gmail.com>"]
version = "0.0.0"
edition = "2021"
description = "A toy programming language to play around with"
license = "MIT OR APACHE"
publish = false

[dependencies]
clap = { version = "3.1.5", features = ["derive"] }
# TODO toyc does not need to directly depend on toyc-arena
#       temporarily done so it gets compiled and tested with
#       everything else
toyc-arena = { path = "../toyc-arena" }
toyc-ast = { path = "../toyc-ast" }
toyc-ast-passes = { path = "../toyc-ast-passes" }
toyc-errors = { path = "../toyc-errors" }
toyc-hir = { path = "../toyc-hir" }
toyc-session = { path = "../toyc-session" }
