[package]
name = "test-util"
authors = ["person93 <person93.person93@gmail.com>"]
version = "0.1.0-dev"
edition = "2021"
description = "A toy programming language to play around with"
license = "MIT OR APACHE"
publish = false

[dependencies]
insta = { version = "1.12.0", features = ["glob"] }
parking_lot = "0.12.0"
toyc-errors = { path = "../../compiler/toyc-errors" }
toyc-session = { path = "../../compiler/toyc-session" }
